--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="container">
 
       <!-- Updated with latest Creative -->
-      <a class="navbar-brand js-scroll-trigger" href="#page-top">[Your Site Name Here]</a>
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Ashiva's Page</a>
       <button class="navbar-toggler navbar-toggler-right" type="button" 
               data-toggle="collapse" data-target="#navbarResponsive" 
               aria-controls="navbarResponsive" aria-expanded="false" 
@@ -78,7 +78,7 @@
       <div class="row">
         <div class="col-lg-10 mx-auto">
           <h1 class="text-uppercase">
-            <strong>[Your Full Name]</strong>
+            <strong>Ashiva Prameswara</strong>
           </h1>
           <hr class="divider my-4" />
         </div>
@@ -111,20 +111,20 @@
         <div class="col-lg-3 col-md-6 col-sm-6 text-center div-padding-fix mb-4">
           <i class="fa fa-4x fa-graduation-cap text-faded sr-icons"></i>
           <h3 class="text-white">Graduation</h3>
-          <p class="text-faded">Graduated in [Month Year] [with Summa Cum Laude]</p>
+          <p class="text-faded">Graduated in [2025] [with Summa Cum Laude]</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
-          <p class="text-faded no-margin">[C / C++, Python, C#]</p>
+          <p class="text-faded no-margin">[C++, Python, Golang]</p>
           <p class="text-faded">[HTML5 (HTML/CSS/JS)]</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
-					<p class="text-faded">[Special Skills ex: Full Stack Developer]</p>
+					<p class="text-faded">[Special Skills : still explore]</p>
           <p class="text-faded no-margin">[C# .NET Back end]</p>
           <p class="text-faded">[HTML5 Front end]</p>
         </div>
@@ -149,17 +149,17 @@
 	      <div class="col-sm-12 text-center mt-4 mb-4">
           <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">[Current Job/Speciality]</h3>
-          <p class="text-muted">[Month year] to Present: <span class="RtnRed">[Workplace]</span></p>
+          <p class="text-muted">[2023] to Present: <span class="RtnRed">[ STAFMUD HIMA IF]</span></p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">[Past Experience]</h3>
-          <p class="text-muted">[Month year] to [Month year]: [Location]</p>
+          <p class="text-muted">[2021] to [Month year]: [Sponsorship Java Business Competition]</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
           <h3 class="mt-4 mb-4">[Past Experience/Activity]</h3>
-          <p class="text-muted">[Month year] to [Month year]: [Location]</p>
+          <p class="text-muted">[2022] to [Month year]: [Duta Kemanusiaan KOICA X PMI]</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-android text-primary sr-icons"></i>
