--- a/index.html
+++ b/index.html
@@ -118,15 +118,12 @@
           <i class="fa fa-4x fa-code text-faded sr-icons"></i>
           <h3 class="text-white">Languages</h3>
           <p class="text-faded no-margin">[C++, Python, Golang]</p>
-          <p class="text-faded">[HTML5 (HTML/CSS/JS)]</p>
         </div>
 
         <div class="col-lg-3 col-md-6 col-sm-6 text-center mb-4">
           <i class="fa fa-4x fa-file-code-o text-faded sr-icons"></i>
           <h3 class="text-white">Skills</h3>
 					<p class="text-faded">[Special Skills : still explore]</p>
-          <p class="text-faded no-margin">[C# .NET Back end]</p>
-          <p class="text-faded">[HTML5 Front end]</p>
         </div>
       </div>
 
@@ -148,30 +145,29 @@
         </div>
 	      <div class="col-sm-12 text-center mt-4 mb-4">
           <i class="fa fa-4x fa-rocket text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Current Job/Speciality]</h3>
-          <p class="text-muted">[2023] to Present: <span class="RtnRed">[ STAFMUD HIMA IF]</span></p>
+          <h3 class="mt-4 mb-4">Student</h3>
+          <p class="text-muted">September, 2021 to Present: <span class="RtnRed">Telkom University</span></p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Past Experience]</h3>
-          <p class="text-muted">[2021] to [Month year]: [Sponsorship Java Business Competition]</p>
+          <h3 class="mt-4 mb-4">Past Experience</h3>
+          <p class="text-muted">2022: Divisi Sponsorship Java Business Competition</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-fighter-jet text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">[Past Experience/Activity]</h3>
-          <p class="text-muted">[2022] to [Month year]: [Duta Kemanusiaan KOICA X PMI]</p>
+          <h3 class="mt-4 mb-4">[Past Activity]</h3>
+          <p class="text-muted">2022: Duta Kemanusiaan KOICA X PMI</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-android text-primary sr-icons"></i>
           <i class="fa fa-4x fa-server text-primary sr-icons ml-4"></i>
-          <h3 class="mt-4 mb-4">Technical Intern</h3>
-          <p class="text-muted mb-4">[Year]: [Location]</p>
-          <p class="text-muted mb-4">[Year]: [Location]</p>
+          <h3 class="mt-4 mb-4">Current Activity</h3>
+          <p class="text-muted mb-4">Staff Muda HIMA IF</p>
         </div>
         <div class="col-lg-3 col-sm-6 text-center">
           <i class="fa fa-4x fa-pied-piper text-primary sr-icons"></i>
-          <h3 class="mt-4 mb-4">Research Assistant</h3>
-          <p class="text-muted">[Year]: [Location]</p>
+          <h3 class="mt-4 mb-4">Future Job</h3>
+          <p class="text-muted">Web Developer</p>
         </div>
       </div>
 	    
